--- a/hocon/style.conf
+++ b/hocon/style.conf
@@ -19,11 +19,18 @@ sources: {
     attribution: 国土数値情報　医療圏データ
     maxzoom: 12
     tiles: [
-      "https://optgeo.github.io/jma2014/zxy/pma/{z}/{x}/{y}.pbf"
+      "https://optgeo.github.io/jma14/zxy/pma/{z}/{x}/{y}.pbf"
     ]
     type: vector
   }
-
+  pma: {
+    attributiion: 国土数値情報　医療圏データ
+    maxzoom: 12
+    tiles: [
+      "https://optgeo.github.io/jma14/zxy/sma/{z}/{x}/{y}.pbf"
+    ]
+    type: vector
+  }
 }
 version: 8
 
