--- a/hocon/style.conf
+++ b/hocon/style.conf
@@ -12,7 +12,51 @@ layers: [
     }
     type: background
   }
-
+  {
+    id: pma
+    type: fill
+    source: pma
+    source-layer: Primary_medical_area
+    paint: {
+      fill-color: [
+        rgba
+        0
+        0
+        127
+        0.5
+      ]
+    }
+  }
+  {
+    id: sma
+    type: fill-extrusion
+    source: sma
+    source-layer: Secondary_medical_area
+    paint: {
+      fill-extrusion-color: [
+        rgb
+        0
+        127
+        0
+      ]
+      fill-extrusion-height: [
+        "*"
+        [
+          /
+          [
+            get
+            A38b_007
+          ]
+          [
+            get
+            A38b_006
+          ]
+        ]
+        5
+      ]
+      fill-extrusion-opacity: 0.5
+    }
+  }
 ]
 sources: {
   pma: {
@@ -23,7 +67,7 @@ sources: {
     ]
     type: vector
   }
-  pma: {
+  sma: {
     attributiion: 国土数値情報　医療圏データ
     maxzoom: 12
     tiles: [
@@ -33,4 +77,4 @@ sources: {
   }
 }
 version: 8
-
+zoom: 6
